--- a/vfiis-wrapper/build.gradle
+++ b/vfiis-wrapper/build.gradle
@@ -1,15 +1,43 @@
+def config = [
+        version:'0.0.1',
+
+        groovy:'2.3.11',
+        retrofit:'2.3.0',
+        junit:'4.12'
+]
+
 group 'com.github.galcyurio'
-version '1.0-SNAPSHOT'
+version "${config.version}"
 
 apply plugin: 'groovy'
+apply plugin: 'com.novoda.bintray-release'
+
+publish {
+    userOrg = 'galcyurio'
+    groupId = 'com.github.galcyurio'
+    artifactId = 'vfiis-wrapper'
+    publishVersion = "${config.version}"
+    desc = "wrapper library for 'village forecast information inquiry service'"
+    website = 'https://github.com/galcyurio/village-forecast-information-inquiry-service-wrapper'
+}
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.novoda:bintray-release:0.5.0'
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile "org.codehaus.groovy:groovy-all:${config.groovy}"
+    compile "com.squareup.retrofit2:retrofit:${config.retrofit}"
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "junit:junit:${config.junit}"
 }
