--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -10,5 +10,7 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile project(":vfiis-wrapper")
+
+    testCompile "junit:junit:4.12"
 }
