--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     compile project(":vfiis-wrapper")
 
     testCompile "junit:junit:4.12"
+    testCompile "org.assertj:assertj-core:2.6.0"
 }
