--- a/vfiis-wrapper/build.gradle
+++ b/vfiis-wrapper/build.gradle
@@ -1,5 +1,5 @@
 def config = [
-        version : '0.0.2-SNAPSHOT',
+        version : '0.1.0',
 
         groovy  : '2.3.11',
         retrofit: '2.3.0',
