--- a/vfiis-wrapper/build.gradle
+++ b/vfiis-wrapper/build.gradle
@@ -1,5 +1,19 @@
+def config = [
+        version : '0.1.0',
+
+        groovy  : '2.3.11',
+        retrofit: '2.3.0',
+        okhttp: '3.8.0',
+        findBugs: '3.0.2',
+
+        guava   : '23.2',
+        jodaTime : '2.9.9',
+        junit   : '4.12',
+        assertj : '2.6.0'
+]
+
 group 'com.github.galcyurio'
-version "${libs.version}"
+version "${config.version}"
 
 apply plugin: 'groovy'
 apply plugin: 'com.novoda.bintray-release'
@@ -8,7 +22,7 @@ publish {
     userOrg = 'galcyurio'
     groupId = 'com.github.galcyurio'
     artifactId = 'vfiis-wrapper'
-    publishVersion = "${libs.version}"
+    publishVersion = "${config.version}"
     desc = "wrapper library for 'village forecast information inquiry service'"
     website = 'https://github.com/galcyurio/village-forecast-information-inquiry-service-wrapper'
 }
@@ -28,21 +42,20 @@ targetCompatibility = 1.7
 
 repositories {
     mavenCentral()
-    jcenter()
 }
 
 dependencies {
-    compile(
-            libs.groovy,
-            libs.findbug,
-            libs.retrofit,
-            libs.okhttp)
+    compile "org.codehaus.groovy:groovy-all:${config.groovy}"
 
-    testCompile(
-            libs.junit,
-            libs.assertj,
-            libs.guavaJre,
-            libs.jodaTime,
-            libs.retrofitMock,
-            libs.okhttpMockWebServer)
+    compile "com.squareup.retrofit2:retrofit:${config.retrofit}"
+    compile "com.squareup.retrofit2:converter-jackson:${config.retrofit}"
+    compile "com.squareup.okhttp3:okhttp:${config.okhttp}"
+    compile "com.google.code.findbugs:jsr305:${config.findBugs}"
+
+    testCompile "com.google.guava:guava:${config.guava}-jre"
+    testCompile "joda-time:joda-time:${config.jodaTime}"
+    testCompile "junit:junit:${config.junit}"
+    testCompile "org.assertj:assertj-core:${config.assertj}"
+    testCompile "com.squareup.retrofit2:retrofit-mock:${config.retrofit}"
+    testCompile "com.squareup.okhttp3:mockwebserver:${config.okhttp}"
 }
