--- a/vfiis-wrapper/build.gradle
+++ b/vfiis-wrapper/build.gradle
@@ -1,19 +1,5 @@
-def config = [
-        version : '0.1.0',
-
-        groovy  : '2.3.11',
-        retrofit: '2.3.0',
-        okhttp: '3.8.0',
-        findBugs: '3.0.2',
-
-        guava   : '23.2',
-        jodaTime : '2.9.9',
-        junit   : '4.12',
-        assertj : '2.6.0'
-]
-
 group 'com.github.galcyurio'
-version "${config.version}"
+version "${versions.version}"
 
 apply plugin: 'groovy'
 apply plugin: 'com.novoda.bintray-release'
@@ -22,7 +8,7 @@ publish {
     userOrg = 'galcyurio'
     groupId = 'com.github.galcyurio'
     artifactId = 'vfiis-wrapper'
-    publishVersion = "${config.version}"
+    publishVersion = "${versions.version}"
     desc = "wrapper library for 'village forecast information inquiry service'"
     website = 'https://github.com/galcyurio/village-forecast-information-inquiry-service-wrapper'
 }
@@ -45,17 +31,17 @@ repositories {
 }
 
 dependencies {
-    compile "org.codehaus.groovy:groovy-all:${config.groovy}"
+    compile(
+            deps.groovy,
+            deps.retrofit.core, deps.retrofit.jackson,
+            deps.okhttp.core,
+            deps.findBugs
+    )
 
-    compile "com.squareup.retrofit2:retrofit:${config.retrofit}"
-    compile "com.squareup.retrofit2:converter-jackson:${config.retrofit}"
-    compile "com.squareup.okhttp3:okhttp:${config.okhttp}"
-    compile "com.google.code.findbugs:jsr305:${config.findBugs}"
-
-    testCompile "com.google.guava:guava:${config.guava}-jre"
-    testCompile "joda-time:joda-time:${config.jodaTime}"
-    testCompile "junit:junit:${config.junit}"
-    testCompile "org.assertj:assertj-core:${config.assertj}"
-    testCompile "com.squareup.retrofit2:retrofit-mock:${config.retrofit}"
-    testCompile "com.squareup.okhttp3:mockwebserver:${config.okhttp}"
+    testCompile(
+            deps.guava.jre,
+            deps.jodaTime,
+            deps.junit, deps.assertj,
+            deps.retrofit.mock, deps.okhttp.mock
+    )
 }
